# image-search-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  tmp_upload_dogs.py  tmp_vector.py
app/: app.py
app/api/: __init__.py  data.py  image.py  index.py
app/database/: __init__.py  engine.py  migration.py  models.py
app/models/: vector.py
app/utils/: __init__.py  response.py
core/: __init__.py  image_to_vector.py  index.py  search_engine.py
core/utils/: __init__.py  get_content_type.py
core/utils/database/: cosine_similarity.sql
postgres/: Dockerfile
postgres_1/: Dockerfile
settings/: config.py  env
tools/: run.sh  wait_for_postgres.sh
