[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = ""
authors = ["MarkAntipin <antipinsuperstar@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.7"
fastapi = "^0.58.0"
elasticsearch-async = "^6.2.0"
aiofiles = "^0.5.0"
uvicorn = "^0.11.5"
python-magic = "^0.4.18"
faiss = "^1.5.3"
img2vec-pytorch = "^0.2.5"

[tool.poetry.dev-dependencies]
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
